--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "devDependencies": {
         "@babel/preset-env": "^7.22.7",
+        "@types/jest": "^29.5.2",
         "babel-jest": "^29.6.1",
         "css-loader": "^6.8.1",
         "eslint": "^8.44.0",
